--- a/src/app/views/pokemon/pokemon.component.html
+++ b/src/app/views/pokemon/pokemon.component.html
@@ -22,7 +22,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Acción </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="primary" (click)="detail(element)">
+          <button mat-button class="btn-detail" (click)="detail(element)">
             Ver detalle
           </button>
           <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
@@ -33,6 +33,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator class="wrapper-table__paginator" [pageSizeOptions]="[10,15,20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator class="wrapper-table__paginator" showFirstLastButtons [pageSizeOptions]="[10,15,20]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
