refactor(dist): generate compiled to prod

--- a/src/styles/utils/_variables.sass
+++ b/src/styles/utils/_variables.sass
@@ -1,14 +1,11 @@
-$color-blue: #5eadff
-$color-blue-1: #66b8ffab
-$color-blue-2: #007bfb
-$color-blue-3:#154e6f
-$color-green-2: #4caf50ab
-$color-orange: #f39521
-$color-brown: #a5293559
-
-
-$border-gray: 1px solid rgba(0,0,0,.26)
-
-$header: #a0baf7
-
-$size-title: 1.5rem
+$color-yellow: #caba35
+$color-white: #fff
+$color-grey: #c7c7c759
+$color-grey-2: #a7c5d1
+$color-grey-3: #bdbdbd8c
+$color-grey-4: #b3a9a9
+$color-grey-5: #e3e3e3f0
+$color-black: #00000091
+$color-brow: #864343
+$color-blue: #4078c7
+$color-blue-2: #0b427e6b
