--- a/src/app/shared/components/prv-empty/prv-empty.component.sass
+++ b/src/app/shared/components/prv-empty/prv-empty.component.sass
@@ -1,3 +1,5 @@
+@import '_globals'
+
 .empty
   display: flex
   flex-direction: column
@@ -6,5 +8,5 @@
   &__img
     width: 15rem
   &__text
-    color: #caba35
+    color: $color-yellow
     font-size: 2.5rem
