--- a/src/app/views/detail-pokemon/detail-pokemon.component.sass
+++ b/src/app/views/detail-pokemon/detail-pokemon.component.sass
@@ -1,8 +1,13 @@
 @import '_globals'
 
+.back
+  margin-bottom: 1rem
+  height: 2rem
+  color: $color-white
+
 .main-container
   width: 100%
-  height: 100vh
+  height: calc(100vh - 3rem)
   display: flex
   flex-direction: column
   align-items: center
@@ -11,34 +16,30 @@
     justify-content: normal
     align-items: baseline
 
-.back
-  position: absolute
-  top: 1rem
-  left: 1rem
-  color: #fff
-
 .card
   display: flex
   width: max-content
+  height: max-content
   @include tablet
     flex-direction: column
     width: 100%
 
 .wrapper-image
   display: flex
+  justify-content: center
+  align-items: center
   padding: 2rem
-  background: #c7c7c759
-  @include tablet
-    justify-content: center
+  background: $color-grey
   &__pokemon
     min-width: 9rem
     width: 85%
+    height: 15rem
     @include tablet
       width: 9rem
 
 .wrapper-description
-  background: #00000091
-  color: #fff
+  background: $color-black
+  color: $color-white
   padding: 1rem
   border-radius: 0 1rem 4rem 0
 
@@ -73,7 +74,7 @@
     &--width
       width: 2rem
   &__btn-value
-    background: #864343
+    background: $color-brow
     padding: 0 .3rem
     margin-right: 0.5rem
     border-radius: 0 1rem
@@ -85,9 +86,9 @@
   &__bar
     height: 1rem
     ::ng-deep .mat-progress-bar-fill::after
-      background-color: #4078c7
+      background-color: $color-blue
     ::ng-deep .mat-progress-bar-buffer
-      background: #a7c5d1
+      background: $color-grey-2
     ::ng-deep .mat-progress-bar
       border-radius: 2px
 
@@ -107,6 +108,9 @@
 
   & ul
     column-count: 4
+    height: 30rem
+    overflow: auto
+    @include scrollbar()
     @include mobile
       column-count: 2
     & li
