--- a/src/app/views/pokemon/pokemon.component.sass
+++ b/src/app/views/pokemon/pokemon.component.sass
@@ -1,9 +1,11 @@
+@import '_globals'
+
 .title
   font-weight: 500
   margin-top: 1rem
   text-align: center
   height: 2rem
-  color: #fff
+  color: $color-white
 
 .main-content
   display: flex
@@ -17,37 +19,37 @@
     width: 15rem
     margin-bottom: 1rem
     & mat-label
-      color: #fff
+      color: $color-white
       font-size: 1.2rem
     & input
-      color: #fff
+      color: $color-white
       font-size: 1rem
-      border-bottom: 1px solid #fff
+      border-bottom: 1px solid $color-white
       margin-top: 0.5rem
       &::placeholder
-        color: #b3a9a9
+        color: $color-grey-4
   &__paginator
     align-self: center
 
   table
     width: 100%
-    background: #0b427e6b
+    background: $color-blue-2
 
     mat-row: nth-child(odd)
     background-color: none
 
     tr.mat-row:hover
-      background-color: #bdbdbd8c
+      background-color: $color-grey-3
 
     th, td
       overflow: hidden
       width: 15rem
       text-overflow: ellipsis
       white-space: nowrap
-      color: #fff
+      color: $color-white
 
   mat-paginator
-    background:#e3e3e3f0
+    background: $color-grey-5
 
 .btn-detail
-  color: #fff
+  color: $color-white
