--- a/src/app/views/detail-pokemon/detail-pokemon.component.sass
+++ b/src/app/views/detail-pokemon/detail-pokemon.component.sass
@@ -1,10 +1,5 @@
 @import '_globals'
 
-.back
-  margin-bottom: 1rem
-  height: 2rem
-  color: $color-white
-
 .main-container
   width: 100%
   height: calc(100vh - 3rem)
@@ -24,6 +19,14 @@
     flex-direction: column
     width: 100%
 
+.back
+  position: absolute
+  width: 2.7rem
+  border: 2px solid $color-white
+  padding: 0.4rem
+  border-radius: 50%
+  margin: 1rem
+  cursor: pointer
 .wrapper-image
   display: flex
   justify-content: center
