refactor(dist): generate compiled to prod

--- a/src/app/views/detail-pokemon/detail-pokemon.component.sass
+++ b/src/app/views/detail-pokemon/detail-pokemon.component.sass
@@ -15,6 +15,7 @@
   display: flex
   width: max-content
   height: max-content
+  max-height: 45rem
   @include tablet
     flex-direction: column
     width: 100%
@@ -111,7 +112,7 @@
 
   & ul
     column-count: 4
-    height: 25rem
+    height: 20rem
     overflow: auto
     @include scrollbar()
     @include mobile
